@@ -45,6 +45,7 @@ Additions:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
      - Add support EET_T_VALUE
+     - Add EET_DATA_DESCRIPTOR_ADD_SUB_NESTED()
     * Eo:
      - Add generic efl object infrastructure
      - Add debugging facility
