@@ -1,3 +1,7 @@
+2013-09-06  Christophe Sadoine
+
+	* Eet: Added EET_DATA_DESCRIPTOR_ADD_SUB_NESTED().
+
 2013-09-24  Jorge Zapata
 
 	* Eina: add a substraction in rectangles and more helpers,
